Сверстана страница под размер экрана с высоким разрешением

--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,6 +1,7 @@
 .place {
     margin: 0;
     margin-bottom: 80px;
+    padding: 0;
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: min-content min-content;
