--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,6 +1,7 @@
 .header__lang-link {
     margin: 0;
     margin-right: 18px;
+    padding: 0;
     text-decoration: none;
     color: white;
     font-size: 24px;
