--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,6 +1,7 @@
 .header {
-    max-width: 1184;
-    margin: 28px 48px 0;
+    max-width: 1184px;
+    margin: 28px auto 0;
+    padding: 0;
     display: flex;
     justify-content: space-between;
 }
