--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -1,6 +1,8 @@
 .intro__text {
     margin: 0;
     margin-top: 40px;
+    padding: 0;
+    
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
