--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -1,7 +1,7 @@
 .lead__caption {
     margin: 0;
     margin-top: 8px;
-    font-family: Inter;
+    padding: 0;
     font-size: 10px;
     font-weight: 400;
     line-height: 14px;
