--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,5 +1,6 @@
 .lead__image {
     margin: 0 auto;
+    padding: 0;
     min-width: 984px;
     min-height: 615px;
     background-image: url(../../../images/kalegin-michail-179870-unsplash.jpg);
