--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,5 +1,6 @@
 .lead__subtitle {
     margin: 32px auto 56px;
+    padding: 0;
     max-width: 640px;
     max-height: 72px;
     font-style: normal;
