--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,9 +1,11 @@
 .photo-grid {
-    margin: 92px 48px 0;
+    margin: 92px auto 0;
+    padding: 0;
     max-width: 1184px;
     display: grid;
     gap: 16px;
-    grid-template-columns: repeat(4, 284px);
-    grid-template-rows: repeat(3, 213px);
-    grid-auto-rows: 213px;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    grid-auto-rows: 1fr;
+    
 }
