--- a/blocks/place/__website/_url-heading/place__website_url-heading.css
+++ b/blocks/place/__website/_url-heading/place__website_url-heading.css
@@ -1,4 +1,6 @@
 .place__website_url-heading {
+    margin: 0;
+    padding: 0;
     font-style: normal;
     font-weight: 400;
     font-size: 12px;
