--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,6 +1,5 @@
 .header__lang-link {
     margin: 0;
-    margin-right: 18px;
     padding: 0;
     text-decoration: none;
     color: white;
@@ -9,6 +8,9 @@
     font-weight: 400;
 }
 
-.header__lang-link:last-child {
-    margin-right: 0;
+@media screen and (max-width: 320px) {
+    .header__lang-link {
+        font-size: 18px;
+        line-height: 111%;
+    }    
 }
