--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,6 +1,26 @@
 .intro {
-    margin: 92px 148px 0;
+    margin: 92px auto 0;
     padding: 0;
-    max-width: 690px;
-    
+    max-width: 984px;
+    text-align: left;    
+}
+
+@media screen and (max-width: 1024px) {
+    .intro {
+        max-width: 928px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .intro {
+        max-width: 720px;
+        margin-top: 88px;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .intro {
+        max-width: 288px;
+        margin-top: 64px;
+    }
 }
