--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,5 +1,25 @@
 .places {
     max-width: 984px;
-    margin: 92px 148px 0;
+    margin: 92px auto 0;
     padding: 0;
+}
+
+@media screen and (max-width: 1024px) {
+    .places {
+        max-width: 928px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .places {
+        max-width: 720px;
+        margin-top: 88px;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .places {
+        max-width: 320px;
+        margin-top: 64px;
+    }
 }
