--- a/blocks/cover/__background/cover__background.css
+++ b/blocks/cover/__background/cover__background.css
@@ -4,7 +4,34 @@
     max-width: 1184px;
     min-height: 740px;
     position: relative;
-    background-image: url(../../../images/dmitrii-vaccinium-22833-unsplash.png);
+    background-image: url(../../../images/cover-trains.jpg);
     background-size: 100%;
+    background-repeat: no-repeat;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     z-index: 0;
+}
+
+
+@media screen and (max-width: 1024px) {
+    .cover__background {
+        max-width: 1024px;
+        min-height: 640px;        
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .cover__background {
+        max-width: 768px;
+        min-height: 480px;        
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .cover__background {
+        max-width: 320px;
+        min-height: 200px;        
+    }
 }
