--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -16,3 +16,23 @@
 .cover__overlay:hover {
     opacity: 0.8;
 }
+
+@media screen and (max-width: 1024px) {
+    .cover__overlay {
+        min-width: 1024px;
+        min-height: 640px;
+    }
+}
+@media screen and (max-width: 768px) {
+    .cover__overlay {
+        min-width: 768px;
+        min-height: 480px;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .cover__overlay {
+        min-width: 320px;
+        min-height: 200px;
+    }
+}
