--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,13 +1,22 @@
 .cover__subtitle {
     margin: 0;
     margin-top: 32px;
+    padding: 0;
     text-align: center;
     font-style: normal;
     font-weight: 400;
     font-size: 18px;
     line-height: 122%;
     max-width: 360px;
-    padding: 0 412px;
     position: relative;
     z-index: 3;
+}
+
+@media screen and (max-width: 320px) {
+    .cover__subtitle {
+        margin-top: 16px;
+        max-width: 288px;
+        font-size: 14px;
+        line-height: 114%;
+    }
 }
