--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -6,8 +6,14 @@
     font-size: 72px;
     line-height: 106%;
     text-align: center;
-    padding-top: 245px;
-    padding-left: 312px;
     position: relative;
     z-index: 3;
+}
+
+@media screen and (max-width: 320px) {
+    .cover__title {
+        max-width: 288px;
+        font-size: 32px;
+        line-height: 109%;
+    }
 }
