--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -7,3 +7,10 @@
     line-height: 114%;
     text-align: right;
 }
+
+@media screen and (max-width: 320px) {
+    .footer__copyright {
+        text-align: left;
+        line-height: 100%;
+    }
+}
