--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -7,3 +7,10 @@
     font-size: 16px;
     line-height: 112%;
 }
+
+@media screen and (max-width: 320px) {
+    .footer__link {
+        font-size: 24px;
+        line-height: 100%;
+    }
+}
