--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -6,3 +6,10 @@
     flex-direction: row;
     column-gap: 18px;
 }
+
+@media screen and (max-width: 320px) {
+    .footer__links {
+        flex-direction: column;
+        row-gap: 32px;
+    }
+}
