--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -5,3 +5,26 @@
     display: flex;
     justify-content: space-between;
 }
+
+@media screen and (max-width: 1024px) {
+    .footer {
+        max-width: 928px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .footer {
+        max-width: 720px;
+        margin-top: 88px;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .footer {
+        max-width: 288px;
+        margin-top: 64px;
+        margin-left: 16px;
+        flex-direction: column;
+        row-gap: 48px;
+    }
+}
