--- a/blocks/header/__lang-links/header__lang-links.css
+++ b/blocks/header/__lang-links/header__lang-links.css
@@ -1,5 +1,15 @@
 .header__lang-links {
-    margin: 0;
+    margin: 18px 0 6px;
     padding: 0;
-    margin-top: 18px;
+    list-style: none;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    column-gap: 18px;
+}
+
+@media screen and (max-width: 320px) {
+    .header__lang-links {
+        margin: 14px 0 8px;
+    }
 }
