--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -5,3 +5,22 @@
     display: flex;
     justify-content: space-between;
 }
+
+@media screen and (max-width: 1024px) {
+    .header {
+        max-width: 928px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .header {
+        max-width: 720px;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .header {
+        max-width: 288px;
+        margin-top: 16px;
+    }
+}
