--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -1,10 +1,16 @@
 .intro__list {
     margin: 0;
     padding: 0;
-    margin-top: 40px;
+    margin-top: 33px;
     font-style: normal;
     font-weight: 700;
     font-size: 12px;
     line-height: 150%;
     list-style: none;
+}
+
+@media screen and (max-width: 320px) {
+    .intro__list {
+        margin-top: 34px;
+    }
 }
