--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -2,9 +2,23 @@
     margin: 0;
     margin-top: 40px;
     padding: 0;
-    
+    max-width: 690px;
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
     line-height: 163%;
+}
+
+@media screen and (max-width: 768px) {
+    .intro__text {
+        max-width: 720px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .intro__text {
+        min-width: 288px;
+        font-size: 16px;
+        line-height: 163%;
+    }
 }
