--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -1,8 +1,23 @@
 .intro__title {
     margin: 0;
     padding: 0;
+    max-width: 690px;
     font-style: normal;
     font-weight: 900;
     font-size: 54px;
     line-height: 107%
+}
+
+@media screen and (max-width: 768px) {
+    .intro__title {
+        max-width: 720px;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .intro__title {
+        max-width: 288px;
+        font-size: 32px;
+        line-height: 109%;
+    }
 }
