--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -4,8 +4,20 @@
     padding: 0;
     font-size: 10px;
     font-weight: 400;
-    line-height: 14px;
+    line-height: 140%;
     letter-spacing: 1.5px;
     text-align: left;
+    text-transform: uppercase;
+}
 
+@media screen and (max-width: 768px) {
+    .lead__caption {
+        margin-left: 24px;
+    }    
+}
+
+@media screen and (max-width: 768px) {
+    .lead__caption {
+        margin-left: 16px;
+    }    
 }
