--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,10 +1,29 @@
 .lead__image {
     margin: 0 auto;
     padding: 0;
-    min-width: 984px;
+    max-width: 984px;
     min-height: 615px;
-    background-image: url(../../../images/kalegin-michail-179870-unsplash.jpg);
-    background-size: 984px 615px;
-    background-repeat: no-repeat;
-    
+    background-image: url(../../../images/lead-polka.jpg);
+    background-size: 100%;
+    background-repeat: no-repeat;   
+}
+
+@media screen and (max-width: 1024px) {
+    .lead__image {
+        max-width: 928px;
+        min-height: 580px;
+    }    
+}
+
+@media screen and (max-width: 768px) {
+    .lead__image {
+        max-width: 768px;
+        min-height: 480px;
+    }    
+}
+@media screen and (max-width: 320px) {
+    .lead__image {
+        max-width: 320px;
+        min-height: 200px;
+    }    
 }
