--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -2,10 +2,19 @@
     margin: 32px auto 56px;
     padding: 0;
     max-width: 640px;
-    max-height: 72px;
     font-style: normal;
     font-weight: 400;
     font-size: 30px;
     line-height: 120%;
     text-align: center;
+}
+
+@media screen and (max-width: 320px) {
+    .lead__subtitle {
+        margin-top: 16px;
+        margin-bottom: 40px;
+        max-width: 288px;
+        font-size: 16px;
+        line-height: 125%;
+    }
 }
