--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -3,9 +3,36 @@
     padding: 0;
     max-width: 1184px;
     display: grid;
-    gap: 16px;
+    row-gap: 16px;
+    column-gap: 16px;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(3, 1fr);
-    grid-auto-rows: 1fr;
-    
+    grid-auto-rows: 1fr;    
+}
+
+@media screen and (max-width: 1024px) {
+    .photo-grid {
+        max-width: 928px;
+        grid-template-columns: repeat(3, 1fr);
+        row-gap: 14px;
+        column-gap: 14px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .photo-grid {
+        max-width: 720px;
+        grid-template-columns: repeat(2, 1fr);
+        row-gap: 16px;
+        column-gap: 16px;
+        margin-top: 88px;
+    }
+}
+@media screen and (max-width: 320px) {
+    .photo-grid {
+        max-width: 288px;
+        grid-template-columns: 1fr;
+        row-gap: 12px;
+        margin-top: 64px;
+    }
 }
