--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -10,3 +10,17 @@
 .place__paragraph:last-child {
     margin-bottom: 0;
 }
+
+@media screen and (max-width: 768px) {
+    .place__paragraph {
+        font-size: 16px;
+        margin-bottom: 25px;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .place__paragraph {
+        max-width: 288px;
+        margin: 0 auto 25px;
+    }
+}
