--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -3,3 +3,10 @@
     padding: 0;
     align-self: end;
 }
+
+@media screen and (max-width: 320px) {
+    .place__website {
+        max-width: 288px;
+        margin-left: 16px;        
+    }
+}
