--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -4,11 +4,32 @@
     padding: 0;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: min-content min-content;
-    gap: 40px 48px;
+    grid-template-rows: min-content max-content;
+    row-gap: 48px;
+    column-gap: 40px;
     align-content: start;
-    
 }
 .place:last-child {
     margin-bottom: 0;
+}
+
+@media screen and (max-width: 1024px) {
+    .place {
+        column-gap: 32px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .place {
+        column-gap: 28px;
+        margin-bottom: 73px;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .place {
+        grid-template-columns: 1fr;
+        margin-bottom: 50px;
+        row-gap: 32px;
+    }
 }
