--- a/blocks/root/root.css
+++ b/blocks/root/root.css
@@ -1,8 +1,8 @@
 .root {
     margin: 0;
     padding: 0;
-    width: 100%;
+    max-width: 100vw;
     background-color: #2A2C2F;
-    font-family: 'Inter';
+    font-family: "Inter", "Arial", sans-serif;
     color: white;
 }
