--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -17,20 +17,27 @@
     opacity: 0.8;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1279px) {
     .cover__overlay {
         min-width: 1024px;
         min-height: 640px;
     }
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1023px) {
     .cover__overlay {
         min-width: 768px;
         min-height: 480px;
     }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 767px) {
+    .cover__overlay {
+        min-width: 425px;
+        min-height: 267px;
+    }
+}
+
+@media screen and (max-width: 424px) {
     .cover__overlay {
         min-width: 320px;
         min-height: 200px;
