--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -4,22 +4,28 @@
     padding: 0;    
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1279px) {
     .cover {
         max-width: 1024px;
     }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1023px) {
     .cover {
         max-width: 768px;
         margin-top: 90px;
     }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 767px) {
+    .cover {
+        max-width: 425px;
+        margin-top: 66px;
+    }
+}
+
+@media screen and (max-width: 424px) {
     .cover {
         max-width: 320px;
-        margin-top: 66px;
     }
 }
