--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -6,19 +6,26 @@
     justify-content: space-between;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1279px) {
     .header {
         max-width: 928px;
     }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1023px) {
     .header {
         max-width: 720px;
     }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 767px) {
+    .header {
+        max-width: 383px;
+        margin-top: 16px;
+    }
+}
+
+@media screen and (max-width: 424px) {
     .header {
         max-width: 288px;
         margin-top: 16px;
