--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -9,13 +9,19 @@
     line-height: 163%;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1023px) {
     .intro__text {
         max-width: 720px;
     }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
+    .intro__text {
+        max-width: 383px;
+    }
+}
+
+@media screen and (max-width: 424px) {
     .intro__text {
         min-width: 288px;
         font-size: 16px;
