--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -5,22 +5,28 @@
     text-align: left;    
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1279px) {
     .intro {
         max-width: 928px;
     }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1023px) {
     .intro {
         max-width: 720px;
         margin-top: 88px;
     }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 767px) {
+    .intro {
+        max-width: 383px;
+        margin-top: 64px;
+    }
+}
+
+@media screen and (max-width: 424px) {
     .intro {
         max-width: 288px;
-        margin-top: 64px;
     }
 }
