--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -10,14 +10,20 @@
     text-transform: uppercase;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1023px) {
     .lead__caption {
         margin-left: 24px;
     }    
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
+    .lead__caption {
+        margin-left: 20px;
+    }    
+}
+
+@media screen and (max-width: 424px) {
     .lead__caption {
         margin-left: 16px;
     }    
-}
+} 
