--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -8,20 +8,27 @@
     background-repeat: no-repeat;   
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1279px) {
     .lead__image {
         max-width: 928px;
         min-height: 580px;
     }    
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1023px) {
     .lead__image {
         max-width: 768px;
         min-height: 480px;
     }    
 }
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 767px) {
+    .lead__image {
+        max-width: 425px;
+        min-height: 267px;
+    }    
+}
+
+@media screen and (max-width: 424px) {
     .lead__image {
         max-width: 320px;
         min-height: 200px;
