--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -9,12 +9,19 @@
     text-align: center;
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 767px) {
+    .lead__subtitle {
+        max-width: 383px;
+        font-size: 16px;
+        line-height: 125%;
+    }
+}
+
+@media screen and (max-width: 767px) {
     .lead__subtitle {
         margin-top: 16px;
         margin-bottom: 40px;
         max-width: 288px;
-        font-size: 16px;
-        line-height: 125%;
+        
     }
 }
