--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -9,11 +9,16 @@
     font-weight: 900;
     font-style: normal;
 }
-
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 767px) {
     .lead__title {
-        max-width: 288px;
+        max-width: 383px;
         font-size: 40px;
         line-height: 110%;
+    }
+}
+
+@media screen and (max-width: 424px) {
+    .lead__title {
+        max-width: 288px;        
     }
 }
