--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -5,24 +5,27 @@
     max-width: 984px;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1279px) {
     .lead {
         max-width: 928px;
         margin-top: 48px;
-    }
-    
+    }    
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1023px) {
     .lead {
         max-width: 768px;
-    }
-    
+    }    
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 767px) {
+    .lead {
+        max-width: 425px;
+    }    
+}
+
+@media screen and (max-width: 424px) {
     .lead {
         max-width: 320px;
-    }
-    
+    }    
 }
