--- a/blocks/photo-grid/__item/photo-grid__item.css
+++ b/blocks/photo-grid/__item/photo-grid__item.css
@@ -5,21 +5,28 @@
     max-height: 213px;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1279px) {
     .photo-grid__item {
         max-width: 300px;
         max-height: 225px;
     }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1023px) {
     .photo-grid__item {
         max-width: 352px;
         max-height: 264px;
     }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 767px) {
+    .photo-grid__item {
+        max-width: 383px;
+        max-height: 295px;
+    }
+}
+
+@media screen and (max-width: 425px) {
     .photo-grid__item {
         max-width: 288px;
         max-height: 216px;
