--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -5,21 +5,29 @@
     height: 460px;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1279px) {
     .place__image {
         width: 440px;
         height: 440px;
     }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1023px) {
     .place__image {
         width: 340px;
         height: 340px;
+        
     }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 767px) {
+    .place__image {
+        width: 383px;
+        height: 383px;
+        margin: 0 auto;
+    }
+}
+@media screen and (max-width: 424px) {
     .place__image {
         width: 320px;
         height: 320px;
