--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -11,16 +11,21 @@
     margin-bottom: 0;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1023px) {
     .place__paragraph {
         font-size: 16px;
         margin-bottom: 25px;
     }
 }
+@media screen and (max-width: 767px) {
+    .place__paragraph {
+        max-width: 383px;
+        margin: 0 auto 25px;
+    }
+}
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 424px) {
     .place__paragraph {
         max-width: 288px;
-        margin: 0 auto 25px;
     }
 }
