--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -8,18 +8,26 @@
     line-height: 106%;    
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1023px) {
     .place__title {
         font-size: 42px;
         line-height: 110%;
     }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 767px) {
     .place__title {
-        font-size: 32px;
-        line-height: 109%;
+        max-width: 383px;
+        margin-left: 21px;
+        
+    }
+}
+
+@media screen and (max-width: 425px) {
+    .place__title {
         max-width: 288px;
         margin-left: 16px;
+        font-size: 32px;
+        line-height: 109%;
     }
 }
