--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -4,7 +4,14 @@
     align-self: end;
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 767px) {
+    .place__website {
+        max-width: 383px;
+        margin-left: 21px;
+    }
+}
+
+@media screen and (max-width: 424px) {
     .place__website {
         max-width: 288px;
         margin-left: 16px;        
