--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -4,20 +4,26 @@
     padding: 0;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1279px) {
     .places {
         max-width: 928px;
     }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1023px) {
     .places {
         max-width: 720px;
         margin-top: 88px;
     }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 767px) {
+    .places {
+        max-width: 425px;
+    }
+}
+
+@media screen and (max-width: 424px) {
     .places {
         max-width: 320px;
         margin-top: 64px;
