--- a/blocks/root/root.css
+++ b/blocks/root/root.css
@@ -5,4 +5,6 @@
     background-color: #2A2C2F;
     font-family: "Inter", "Arial", sans-serif;
     color: white;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
