--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -5,7 +5,7 @@
     font-style: normal;
     font-weight: 900;
     font-size: 54px;
-    line-height: 107%
+    line-height: 107%;
 }
 
 @media screen and (max-width: 1023px) {
