--- a/blocks/intro/__list/_accent/intro__list_accent.css
+++ b/blocks/intro/__list/_accent/intro__list_accent.css
@@ -1,10 +1,7 @@
-.place__website_url-heading {
+.intro__list_accent {
     margin: 0;
     padding: 0;
     font-style: normal;
     font-weight: 400;
     font-size: 12px;
-    line-height: 100%;
-    letter-spacing: 2px;
-    color: #AAAAAA;
 }
