--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,36 +1,5 @@
 .lead__image {
     margin: 0 auto;
     padding: 0;
-    max-width: 984px;
-    min-height: 615px;
-    background-image: url(../../../images/lead-polka.jpg);
-    background-size: 100%;
-    background-repeat: no-repeat;   
-}
-
-@media screen and (max-width: 1279px) {
-    .lead__image {
-        max-width: 928px;
-        min-height: 580px;
-    }    
-}
-
-@media screen and (max-width: 1023px) {
-    .lead__image {
-        max-width: 768px;
-        min-height: 480px;
-    }    
-}
-@media screen and (max-width: 767px) {
-    .lead__image {
-        max-width: 425px;
-        min-height: 267px;
-    }    
-}
-
-@media screen and (max-width: 424px) {
-    .lead__image {
-        max-width: 320px;
-        min-height: 200px;
-    }    
+    width: 100%;
 }
