--- a/blocks/photo-grid/__item/photo-grid__item.css
+++ b/blocks/photo-grid/__item/photo-grid__item.css
@@ -1,34 +1,5 @@
 .photo-grid__item {
     margin: 0;
     padding: 0;
-    max-width: 284px;
-    max-height: 213px;
-}
-
-@media screen and (max-width: 1279px) {
-    .photo-grid__item {
-        max-width: 300px;
-        max-height: 225px;
-    }
-}
-
-@media screen and (max-width: 1023px) {
-    .photo-grid__item {
-        max-width: 352px;
-        max-height: 264px;
-    }
-}
-
-@media screen and (max-width: 767px) {
-    .photo-grid__item {
-        max-width: 383px;
-        max-height: 295px;
-    }
-}
-
-@media screen and (max-width: 425px) {
-    .photo-grid__item {
-        max-width: 288px;
-        max-height: 216px;
-    }
+    width: 100%;
 }
