--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -5,15 +5,14 @@
     display: grid;
     row-gap: 16px;
     column-gap: 16px;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(3, 1fr);
+    grid-template-columns: repeat(auto-fit, minmax(284px, 1fr));
+    grid-template-rows: 1fr;
     grid-auto-rows: 1fr;    
 }
 
 @media screen and (max-width: 1279px) {
     .photo-grid {
         max-width: 928px;
-        grid-template-columns: repeat(3, 1fr);
         row-gap: 14px;
         column-gap: 14px;
     }
@@ -22,7 +21,6 @@
 @media screen and (max-width: 1023px) {
     .photo-grid {
         max-width: 720px;
-        grid-template-columns: repeat(2, 1fr);
         row-gap: 16px;
         column-gap: 16px;
         margin-top: 88px;
@@ -31,7 +29,6 @@
 @media screen and (max-width: 767px) {
     .photo-grid {
         max-width: 383px;
-        grid-template-columns: 1fr;
         margin-top: 64px;
     }
 }
@@ -39,7 +36,6 @@
 @media screen and (max-width: 424px) {
     .photo-grid {
         max-width: 288px;
-        grid-template-columns: 1fr;
         row-gap: 12px;
     }
 }
